--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -574,10 +574,10 @@ Comparison with \eq{eq:genaction-dbi},
 % 
 \begin{equation}
 \label{eq:genaction-multi}
-P= -f_1 (\varphi ) \sqrt{1-f_2 (\varphi ) X} -f_3 (\varphi) \,,
+P= -f_A (\varphi ) \sqrt{1-f_B (\varphi ) X} -f_C (\varphi) \,,
 \end{equation}
 % 
-implies that $f_1f_2 =2nW$ and $f_2=2/(T_3h^4)$. Hence, 
+implies that $f_Af_B =2nW$ and $f_B=2/(T_3h^4)$. Hence, 
 the new features of this model relative to the standard single-brane 
 scenario are parametrised in terms of the fuzzy potential $W (\varphi )$. 
 This configuration is conjectured to be dual to 
@@ -598,11 +598,11 @@ The generalised BM bound for IR models, with branes propagating towards the bulk
 % 
 \begin{equation}
 \label{eq:f2IRlower-multi}
-\frac{f_2\Mpl^4}{N} > \frac{(\Delta \N_*)^2}{4\pi^2}
+\frac{f_B\Mpl^4}{N} > \frac{(\Delta \N_*)^2}{4\pi^2}
 \frac{\sqrt{-3\fnleq}}{(1-n_s)\Pr}  \,.
 \end{equation}
 % 
-As we know $f_2$, this may be expressed as 
+As we know $f_B$, this may be expressed as 
 a limit on the value of the warp factor $h(\varphi_*)$ on CMB scales: 
 % 
 \begin{equation}
@@ -699,7 +699,7 @@ n \ll 225.
 In deriving the action \eqref{eq:largeP-multi} the number of coincident branes was assumed to be
 large. However we have now found that for the case of branes propagating towards the bulk, the
 number of such branes is bounded from above.
-Furthermore, since $f_1f_2 \simeq {\rm constant}$ for the $AdS_5$ throat, 
+Furthermore, since $f_Af_B \simeq {\rm constant}$ for the $AdS_5$ throat, 
 the stronger form of the inequality (\ref{eq:genBMbound}) may be used. The right hand side of
 inequality \eqref{eq:nlimit-dbi} would be reduced by a factor of $(   \Neff /\Delta \N_*)^2$ by
 substituting 
@@ -1093,6 +1093,7 @@ case $\alpha =18/5$ or $s=-1/3$ in the analytic solution
 \eqref{eq:thirdint-multi} which after redefinition of the $f_i (\varphi)$
 becomes:
 % 
+
 \begin{equation}
 P = \frac{-f_1\left[8 - 4f_2X^{1/3}
 -\left(f_2X^{1/3}\right)^2\right]}{\sqrt{1-f_2X^{1/3}}} -f_3 \, .
