--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -586,6 +586,7 @@ of the throat \cite{dual1,dual2,dual3}.
 
 % % % % % % % % % % % % % % % % % % % % % % % % 
 \subsection{\texorpdfstring{Bound on $n$ during IR propagation}{Bound on n during IR propagation}}
+\label{sec:ir-largen-bound-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % 
 
 The regime $W \gg 1$ is of interest for 
