--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -719,7 +719,7 @@ may then be combined to provide a relation for the warped brane tension:
 \begin{equation}
 \label{eq:obswarp-dbiintro}
 \frac{T (\varphi)}{\Mpl^4}  = 
-\frac{\pi^2}{16} r^2\Pr \left( 1-\frac{1}{3\fnl} \right) \,.
+\frac{\pi^2}{16} r^2\Pr \left( 1-\frac{1}{3\fnleq} \right) \,.
 \end{equation}
 % 
 
