Point 4 of Kazuya's corrections: Added clear note about c_s<<1 on Pg 46.

--- a/corrections.tex
+++ b/corrections.tex
@@ -434,3 +434,9 @@ three of the models as $\bar{\varepsilon}_H$ increases towards unity. The end ti
 inflation is specified by hand for the contrived toy model, so this effect is
 not seen.
 
+\section{Kazuya's Corrections}
+\subsection{Point 4: State $\cs\ll 1$ clearly}
+\textbf{Added to discussion on Pg 46:}
+We will assume throughout Part~\ref{part:dbi} of this thesis that motion takes
+place in the relatvistic limit in which $\cs\ll1$.
+
