--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -622,7 +622,8 @@ imposes an upper bound on the kinetic energy
 of the inflaton, $\dot{\varphi}^2 < T(\varphi)$, which 
 is independent of the steepness of the potential.
 The motion of the brane is said to be relativistic when this bound is 
-close to saturation.
+close to saturation. We will assume throughout Part~\ref{part:dbi} of this thesis that motion takes
+place in the relatvistic limit in which $\cs\ll1$. 
  
 We now define the epoch that is directly 
 accessible to cosmological observations as ``observable inflation''. 
