--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.6b2.
 % Encoding: ISO8859_1
 
 @BOOK{abramowitz+stegun,
@@ -4633,6 +4633,21 @@
   primaryclass = {astro-ph.CO},
   slaccitation = {%%CITATION = 0906.0232;%%},
   timestamp = {2009.06.02}
+}
+
+@ARTICLE{Seljak:1996gy,
+  author = {Seljak, Uros and Zaldarriaga, Matias},
+  title = {{Signature of gravity waves in polarization of the microwave background}},
+  journal = {Phys. Rev. Lett.},
+  year = {1997},
+  volume = {78},
+  pages = {2054-2057},
+  archiveprefix = {arXiv},
+  doi = {10.1103/PhysRevLett.78.2054},
+  eprint = {astro-ph/9609169},
+  owner = {ith},
+  slaccitation = {%%CITATION = ASTRO-PH/9609169;%%},
+  timestamp = {2010.03.30}
 }
 
 @ARTICLE{Sen:2008bg,
