--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1075,16 +1075,28 @@ $r\ne0$ is given by the combined WMAP5+BAO+SN measurement as
 % 
 \begin{equation}
  \label{eq:wmapns-intro}
- n_s = 0.968 \pm 0.015\,,
+ n_s = 0.968 \pm 0.015\,.
 \end{equation}
 % 
-and $r$ in this case is bounded by
+
+The detection of B-mode polarisation would provide definitive proof of the existence of primordial
+gravitational modes and much observational effort is being expended in the attempt to achieve such
+a detection \cite{Seljak:1996gy, Baumann:2008aq,Chiang:2009xs,Piacentini2006,Sievers2007,vpj}.
+The observational bound on $r$ from WMAP5 using only the B-mode power spectrum
+is weak with $r< 4.7$ at the 95\% confidence level, when $n_s$ is fixed at the best fit value.
+Including other polarisation data from the E-mode and TE power spectra reduces this bound to
+$r<1.6$, again with $n_s$ fixed. A stronger bound has been obtained with the B-mode
+power spectrum by the BICEP experiment, giving $r<0.73$ \cite{Chiang:2009xs}. The
+strongest bound to date on the tensor to scalar ratio is given when the temperature power spectrum
+data is also included in the WMAP analysis. For the pure WMAP5 data without any restriction on
+$n_s$ but with no spectral running the bound is $r<0.43$. When BAO and SN data is combined with the
+WMAP5 data the bound on the tensor to scalar ratio becomes
 % 
 \begin{equation}
 \label{eq:rbound-intro}
- r < 0.54\,,
+ r < 0.20\,,
 \end{equation}
-at the 95\% confidence level.
+at the 95\% confidence level. 
 
 
 
